# audit-pit-crew

./: .env.example  .gitignore  .pre-commit-config.yaml  ANALYSIS_QUICK_REFERENCE.md  CONTRIBUTING.md  DOCKER_ERRORS_FIXED.md  Dockerfile  IMPLEMENTATION_COMPLETE_OYENTE_ADERYN.md  IMPLEMENTATION_COMPLETE_V2_0.txt  IMPLEMENTATION_VERIFICATION.md  IMPROVEMENTS_SUMMARY.md  LICENSE  MULTI_TOOL_COMPARISON_GUIDE.md  MYTHRIL_ANALYSIS_FINDINGS.md  Makefile  PROJECT_ARCHITECTURE_STATUS_REPORT.md  README.md  REFACTORING_DELIVERY_REPORT.md  audit-pit-crew.yml  audit-pit-crew.yml.example  docker-compose.prod.yml  docker-compose.yml  generate_signature.py  issue_test.sol  pr_payload.json  pyproject.toml  requirements.txt  run_scanner_test.py  test_full_flow.py  test_worker.py
.github/: copilot-instructions.md
.github/workflows/: analyzers-check.yml
docs/: ARCHITECTURE_V2_0_COMPLIANCE_REPORT.md  COMPLETION_REPORT.md  CONFIGURATION_EXAMPLES.md  DEPLOYMENT_GUIDE.md  DOCKER_ERRORS_FIX_SUMMARY.md  DOCKER_FIX_COMPLETE.md  DOCKER_FIX_REPORT_DEC2.md  DOCKER_FIX_REPORT_DEC2_UPDATE.md  DOCKER_LOGS_ANALYSIS_SUCCESS.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_ANALYSIS.md  IMPROVEMENTS_APPLIED.md  IMPROVEMENTS_SUMMARY.md  MULTITOOL_IMPLEMENTATION_COMPLETE.md  MULTITOOL_IMPLEMENTATION_STATUS.md  MULTITOOL_QUICK_REFERENCE.md  MULTITOOL_SCANNING.md  OPERATIONAL_GUIDE.md  OYENTE_ADERYN_INTEGRATION.md  OYENTE_ADERYN_VERIFICATION_CHECKLIST.md  QUICK_REFERENCE.md  REFACTORING_DELIVERY_REPORT.md  REVISED_MVP.md  SYSTEM_UPDATE_ACKNOWLEDGMENT.md  SYSTEM_UPDATE_COMPLETE.txt  SYSTEM_UPDATE_VERIFICATION.md  TESTING_VULNERABLE_CONTRACT.md  TOOLS_TROUBLESHOOTING.md  VERIFICATION_CHECKLIST.md  folder_tructure.md
infra/docker/: worker.Dockerfile
scripts/: analyzers_healthcheck.sh  entrypoint.sh  patch_mythril.py
sol_test/: VulnerableBank.sol  issue_test.sol
src/: config.py
src/api/: main.py
src/app/: audit-pit-crew-scanner.2025-11-26.private-key.pem
src/core/: config.py  git_manager.py  github_auth.py  github_checks.py  github_client.py  github_reporter.py  redis_client.py
src/worker/: celery_app.py  (+1 more)
(+21 files in other folders)
